# tide-sim

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
.cursor/rules/: project_info.mdc
.github/workflows/: ci.yml  publish.yml
examples/: test_simulation.py
examples/assets/simulation/: robot.urdf
examples/assets/simulation/assets/: 2106_4008_0430.part  2106_4008_0430.stl  laser_cut_bottom_plate.part  laser_cut_bottom_plate.stl  laser_cut_top_plate.part  laser_cut_top_plate.stl  mock_module.part  mock_module.stl  wheel.part
examples/config/: config.yaml
examples/nodes/: joint_state_publisher.py
src/tide_sim/: __init__.py
src/tide_sim/models/: __init__.py  joint.py
src/tide_sim/nodes/: __init__.py  sim.py
tests/: __init__.py  test_simulation.py
